plugins {
    id 'com.android.application'
}

android {
    compileSdk 31

    defaultConfig {
        applicationId "com.shatyuka.killergram"
        minSdk 16
        targetSdk 31
        versionCode appVerCode.toInteger()
        versionName appVerName
    }
    applicationVariants.all { variant ->
        variant.resValue "string", "app_version", variant.versionName
        variant.outputs.all { output ->
            if (variant.buildType.name == 'release') {
                outputFileName = "Killergram_${defaultConfig.versionName}.apk"
            }
        }
    }

    buildTypes {
        release {
            minifyEnabled false
            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
        }
    }
    compileOptions {
        sourceCompatibility JavaVersion.VERSION_11
        targetCompatibility JavaVersion.VERSION_11
    }
}

dependencies {
    compileOnly 'de.robv.android.xposed:api:82'
}

